--- a/UI/CrestronInterface/index.html
+++ b/UI/CrestronInterface/index.html
@@ -6,6 +6,8 @@
     <title>Crestron Interface</title>
   </head>
   <body>
+    <script src="./index.js"></script>
+    <script src="./cr-com-lib.js"></script>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
